[JENKINS-42515] fix spacing

--- a/blueocean-dashboard/src/main/less/placeholder.less
+++ b/blueocean-dashboard/src/main/less/placeholder.less
@@ -66,6 +66,12 @@
     }
 }
 
+.NoRuns {
+    .PlaceholderTable {
+        margin-top: 20px;
+    }
+}
+
 .NoRunsForBranch {
     position: relative;
     margin-top: 25px;
